# tableplanner

./: .coveragerc  .isort.cfg  AUTHORS.md  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
data/: guests.csv  seats.csv
docs/: conf.py  index.md
src/tableplanner/: __init__.py  skeleton.py
src/tableplanner/genetic/: __init__.py
src/tableplanner/genetic/crossovers/: __init__.py
src/tableplanner/genetic/mutations/: __init__.py
src/tableplanner/genetic/selections/: __init__.py
tests/: conftest.py  test_skeleton.py
tests/genetic/crossovers/: test_crossovers.py
tests/genetic/mutations/: test_mutations.py
tests/genetic/selections/: test_selections.py
