[metadata]
name = tableplanner
description = Add a short description here!
author = Tomasz Homoncik
author-email = tjhomoncik@gmail.com
license = MIT
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/thomoncik/tableplanner/
project-urls =
    Source = https://github.com/thomoncik/tableplanner/

platforms = any

# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    tableplanner = tableplanner.skeleton:run

[tool:pytest]
addopts =
    --cov tableplanner --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.0rc2
package = tableplanner
extensions =
    markdown
    pre_commit
